--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node build/server.js",
+    "start": "npx tsc & node build/server.js",
     "dev": "nodemon server.ts"
   },
   "author": "Benedict Anthony",
